Initial commit with updated code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Hifza Akhter</title>
+    <title>Portfolio - Zain-ul-Abrar</title>
     <meta name="description" content="Portfolio website for Hifza Akhter" />
     <meta name="author" content="Hifza Akhter" />
 
