Update portfolioss files

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Zain-ul-Abrar</title>
-    <meta name="description" content="Portfolio website for Hifza Akhter" />
-    <meta name="author" content="Hifza Akhter" />
+    <meta name="description" content="Portfolio website for Zain-ul-Abrar" />
+    <meta name="author" content="Zain-ul-Abrar" />
 
     <!-- Open Graph Meta Tags (Optional: customize or remove) -->
-    <meta property="og:title" content="Hifza Akhter portfolio" />
+    <meta property="og:title" content="Zain-ul-Abrar portfolio" />
     <meta property="og:description" content="Explore  more projects, experience, and contact info." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter Meta Tags (Optional: customize or remove) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Hifza Akhter Portfolio" />
+    <meta name="twitter:title" content="Zain-ul-Abrar Portfolio" />
     <meta name="twitter:description" content="Explore projects, experience, and contact info." />
     <meta name="twitter:image" content="/og-image.png" />
   </head>
